--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -13,3 +13,5 @@
 
   <button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
 </form>
+
+<p>Não é um usuário? <a [routerLink]="['newuser']">Se cadastre!</a> </p>
