--- a/src/app/home/new-user/new-user.component.html
+++ b/src/app/home/new-user/new-user.component.html
@@ -15,6 +15,7 @@
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Usuário" formControlName="userName">
     <app-messages *ngIf="newUserForm.get('userName')?.errors?.lowercase && newUserForm.get('userName')?.touched" message="Usuário deve ser em letras minúsculas"></app-messages>
+    <app-messages *ngIf="newUserForm.get('userName')?.errors?.userExists" message="Usuário já existe"></app-messages>
   </div>
   <div class="form-group">
     <input type="password" class="form-control" placeholder="Senha" formControlName="password">
