--- a/src/app/home/new-user/new-user.component.html
+++ b/src/app/home/new-user/new-user.component.html
@@ -15,10 +15,11 @@
   <div class="form-group">
     <input type="text" class="form-control" placeholder="Usuário" formControlName="userName">
     <app-messages *ngIf="newUserForm.get('userName')?.errors?.lowercase && newUserForm.get('userName')?.touched" message="Usuário deve ser em letras minúsculas"></app-messages>
-    <app-messages *ngIf="newUserForm.get('userName')?.errors?.userExists" message="Usuário já existe"></app-messages>
+    <app-messages *ngIf="userExists" message="Usuário já existe"></app-messages>
   </div>
   <div class="form-group">
     <input type="password" class="form-control" placeholder="Senha" formControlName="password">
+    <app-messages *ngIf="newUserForm.errors?.samePasswordAndUser" message="Usuário e senha iguais"></app-messages>
   </div>
   <button class="btn btn-primary btn-block">Cadastrar</button>
 </form>
