--- a/src/app/animals/animals-pic-grid/animals-pic-grid.component.html
+++ b/src/app/animals/animals-pic-grid/animals-pic-grid.component.html
@@ -4,18 +4,19 @@
 
 <div class="row">
   <div class="col-4" *ngFor="let animal of animals">
-    <a [routerLink]="['/animals', animal.id]"></a>
-    <app-card>
-      <app-animal
-        [url]="animal.url"
-        [description]="animal.description"
-      ></app-animal>
-      <i area-hidden="true" class="fa fa-heart-o fa-1x mr-2">{{
-        animal.likes
-      }}</i>
-      <i area-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2">{{
-        animal.comments
-      }}</i>
-    </app-card>
+    <a [routerLink]="['/animals', animal.id]">
+      <app-card>
+        <app-animal
+          [url]="animal.url"
+          [description]="animal.description"
+        ></app-animal>
+        <i area-hidden="true" class="fa fa-heart-o fa-1x mr-2">{{
+          animal.likes
+        }}</i>
+        <i area-hidden="true" class="fa fa-comment-o fa-1x mr-2 ml-2">{{
+          animal.comments
+        }}</i>
+      </app-card>
+    </a>
   </div>
 </div>
