--- a/src/app/animals/animal-detail/animal-detail.component.html
+++ b/src/app/animals/animal-detail/animal-detail.component.html
@@ -13,9 +13,7 @@
           animal.likes
         }}</i>
         <i class="fa fa-comment-o fa-2x mr-2 ml-2">{{ animal.comments }}</i>
-        <i (click)="deletePhoto()" class="fa fa-trash-o fa-2x pull-right">{{
-          animal.comments
-        }}</i>
+        <i (click)="deletePhoto()" class="fa fa-trash-o fa-2x pull-right"></i>
       </small>
 
       <app-comments [id]="animalId" *ngIf="animal.allowComments; else warning">
